Progress diffing algorithm